--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -15,4 +15,9 @@
     height: 30px;
     border: 1px solid darkgray;
     cursor: pointer;
+    border-radius: 5px;
+}
+.product-img{
+    padding-right: 10px;
+    margin-top: 50px;
 }
